# tracking-by-browsing-behavior

./: .gitignore  Cargo.toml  README.md  conf.ini  evaluate.py  notes.txt  run.sh
src/: cli.rs  click_trace.rs  frequency.rs  main.rs  maths.rs  metrics.rs  parse.rs  sample.rs  sequence.rs  structs.rs  utils.rs
src/frequency/: click_trace.rs  evaluation.rs  freq_click_trace.rs  maths.rs  metrics.rs  mod.rs  trace.rs
src/sequence/: click_trace.rs  evaluation.rs  maths.rs  mod.rs  seq_click_trace.rs  trace.rs
tmp/: evaluation  output
