[package]
name = "tracking-by-browsing-behavior"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
indexmap = "1.0.2"
seal = "0.1.0"
rand = "0.8.4"