[package]
name = "tracking-by-browsing-behavior"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
indexmap = "1.0.2"
seal = "0.1.1"
rand = "0.8.4"
rayon = "1.5.1"
log = "0.4"
env_logger = "0.8.4"
rust-ini = "0.17"
nalgebra = "0.29.0"
num-traits = "0.2.14"
chrono = "0.4"
