[package]
name = "tracking-by-browsing-behavior"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
simple_logger = "1.13.0"
indexmap = "1.0.2"
seal = "0.1.1"
rand = "0.8.4"
rayon = "1.5.1"
nalgebra = "0.29.0"
num-traits = "0.2.14"
chrono = "0.4"
ordered-float = "2.8.0"
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
